Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -594,49 +594,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def scale_down_movie(movie):\n",
-    "    movie_copy = dict(movie)\n",
-    "    movie_copy.update({'budget': round(movie['budget']/1000000, 2), 'budget_2013$': round(movie['budget_2013$']/1000000, 2), \n",
-    "                       'intgross': round(movie['intgross']/1000000, 2), 'intgross_2013$': round(movie['intgross_2013$']/1000000, 2),\n",
-    "                       'domgross': round(movie['domgross']/1000000, 2), 'domgross_2013$': round(movie['domgross_2013$']/1000000, 2)\n",
-    "                      })\n",
-    "    return movie_copy"
+    "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'year': 2013,\n",
-       " 'imdb': 'tt1711425',\n",
-       " 'title': '21 &amp; Over',\n",
-       " 'test': 'notalk',\n",
-       " 'clean_test': 'notalk',\n",
-       " 'binary': 'FAIL',\n",
-       " 'budget': 13000000,\n",
-       " 'domgross': 25682380.0,\n",
-       " 'intgross': 42195766.0,\n",
-       " 'code': '2013FAIL',\n",
-       " 'budget_2013$': 13000000,\n",
-       " 'domgross_2013$': 25682380.0,\n",
-       " 'intgross_2013$': 42195766.0,\n",
-       " 'period code': 1.0,\n",
-       " 'decade code': 1.0}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "movies[0]"
    ]
